--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   
   .topnav {
     overflow: hidden;
-    background-color: #333;
+    background-color: rgb(113, 113, 113);
   }
   
   .topnav a {
@@ -22,8 +22,7 @@ body {
   }
   
   .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    color: #333;
   }
   
   .topnav a.active {
