--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
   }
 
 #paint_buckets {
-    align-items: center;
-    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
