--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ body {
     margin-right: auto;
 }
 
-img {
+#paint_buckets {
   width: 500px; 
   height: 200px; 
 }
 
 @media (max-width:767px){
-img {
+#paint_buckets {
   width: 200px; 
   height: 200px; 
 }
