--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
   
   .topnav {
     overflow: hidden;
-    background-color: rgb(113, 113, 113);
+    background-color: blue;
   }
   
   .topnav a {
