--- a/style.css
+++ b/style.css
@@ -48,12 +48,12 @@ body {
 }
 }
 
-#colors {
+#colors-mix {
   padding-left: 32px;
   padding-right: 32px;
 }
 
-#colors {
+#colors-mix {
   width: 320px;
   height: 50px;
   padding: 10px;
