--- a/style.css
+++ b/style.css
@@ -49,13 +49,10 @@ body {
 }
 
 #colors-mix {
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#colors-mix {
+  padding: 30px;
   width: 320px;
   padding: 10px;
   border: 5px solid gray;
   margin: 0;
+  border-radius: 6px;
 }
