--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ h1 {
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
+    background-color: #333;
   }
   
   .topnav {
@@ -53,6 +54,5 @@ body {
   width: 320px;
   padding: 10px;
   border: 5px solid gray;
-  margin: 0;
   border-radius: 6px;
 }
