--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
 }
 
 #random-color-result {
+  padding: 32px;
   height: 200px;
   text-align: center;
   transition: background-color 0.5s ease-in-out;
