--- a/style.css
+++ b/style.css
@@ -61,6 +61,7 @@ body {
   display: flex;
   flex-direction: column;
   gap: 16px;
+  justify-content: center;
 }
 
 #random-color-result {
@@ -69,3 +70,9 @@ body {
   transition: background-color 0.5s ease-in-out;
 }
 
+.class-all {
+  display: flex; 
+  flex-direction: row; 
+  gap: 16px;
+  justify-content: space-around; 
+}
