--- a/style.css
+++ b/style.css
@@ -74,5 +74,5 @@ body {
   display: flex; 
   flex-direction: row; 
   gap: 16px;
-  justify-content: space-around; 
+  justify-content: center; 
 }
