--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ body {
   height: 200px;
   text-align: center;
   transition: background-color 0.5s ease-in-out;
+  line-height: 200px;
 }
 
 .class-all {
