--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+ul {
+  list-style-type: none;
+}
 .topnav {
   overflow: hidden;
   background-color: blue;
