--- a/style.css
+++ b/style.css
@@ -84,6 +84,11 @@ ul {
   justify-content: center; 
 }
 
+#infoButton {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #info {
   display: none;
   margin-left: 32px;
