--- a/style.css
+++ b/style.css
@@ -59,11 +59,11 @@ ul {
 }
 
 #result {
-  height: 200px;
+  height: 100px;
 }
 
 #content {
-  margin: 32px;
+  /* margin: 32px; */
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -89,8 +89,13 @@ ul {
 }
 
 #info {
-  display: none;
-  margin-left: 32px;
+  display: none; /* Hidden by default */
+  width: 100%; /* Full width */
+  background-color: silver;
+  margin:16px 32px 16px 32px;
+  padding:8px;
 }
 
-/* 16 selectors ^ */
+#resulttable {
+  width: 100%;
+}
