--- a/style.css
+++ b/style.css
@@ -103,3 +103,31 @@ ul {
 #clearColorsButton {
    display: none;  
 }
+
+section {
+  margin: 10vh 10vw;
+  display: flex;
+  flex-direction: row;
+}
+
+.cont {
+  width: 40vw;
+}
+
+.gcolors {
+  outline: none;
+  border: none;
+  width: 50px;
+  height: 50px;
+}
+
+.randomColorBtn {
+  margin-top: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+#gradient-cont {
+  width: 100%;
+  height: 125px;
+}
